--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
    <!-- Home Section Start -->
     <div class="home">
       <div class="content">
-        <h5>Big Journey Begins</h5>
+        <h5>Made To Explore</h5>
         <h1>Visit <Span class="changecontent"></Span></h1>
         <p>Let Us Take You Around The World Today</p>
         <a href="#book">Book Place</a>
