--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
      <!-- Google Fonts -->
+
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+
 </head>
 
 <body>
@@ -527,7 +530,15 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</body>
+
+     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+      <script>
+      flatpickr("input[type='date']", {
+       dateFormat: "d-m-Y",
+      });
+      </script>
+
+  </body>
 
 
 
